* Don't require shopify.yml when using environment variables [cody]